# daycounts

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  charter.md  logo-prompt.md
examples/: basic_usage.py
src/daycounts/: __init__.py  accrued.py  conventions.py  dispatcher.py
tests/: test_accrued.py  test_conventions.py  test_new_conventions.py
