[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daycounts"
version = "0.1.0"
description = "Financial day-count conventions in pure Python with zero dependencies: Actual/360, Actual/365F, Actual/Actual ISDA, 30/360 US Bond Basis, 30E/360 Eurobond, year fraction, and accrued interest."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
license-files = ["LICENSE"]
authors = [{ name = "Amaar Chughtai", email = "amaardevx@gmail.com" }]
keywords = [
  "finance",
  "quant",
  "day-count",
  "isda",
  "accrued-interest",
  "fixed-income",
  "bonds",
  "year-fraction",
  "actual-360",
  "30-360",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8", "twine>=5"]

[project.urls]
Homepage = "https://github.com/amaar-mc/daycounts"
Repository = "https://github.com/amaar-mc/daycounts"
Issues = "https://github.com/amaar-mc/daycounts/issues"
Changelog = "https://github.com/amaar-mc/daycounts/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/daycounts"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src"]
